--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -348,9 +348,20 @@ auth:
       # Users DN
       usersDn: ou=users,dc=example,dc=com
       # Bind DN
+      # Prefer using a secret
       bindDn: cn=admin,dc=example,dc=com
       # Bind credentials
+      # Not recommended in production, better use a secret
       bindCredential: admin
+      # Bind credentials in a secret
+      bindCredentialSecret:
+        # Using a secret to store the credentials
+        enabled: false
+        # Name of the secret
+        # This secret is expected to have the following keys:
+        # * bindDn
+        # * bindCredentials
+        secretName: ontrack-ldap-credentials
       # LDAP attributes
       usernameLDAPAttribute: uid
       rdnLDAPAttribute: uid
