--- a/charts/ontrack/templates/keycloak-deployment.yaml
+++ b/charts/ontrack/templates/keycloak-deployment.yaml
@@ -37,24 +37,44 @@ spec:
           image: busybox:1.37.0
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           command: [ "/bin/sh", "-c" ]
+          {{- if .Values.auth.keycloak.ldap.bindCredentialSecret.enabled }}
+          args:
+            - >
+              export BIND_DN="$(cat /secrets/bindDn)" &&
+              export BIND_CREDENTIAL="$(cat /secrets/bindCredential)" &&
+              cat /config/ontrack.json.tpl &&
+              cp /config/ontrack.json.tpl /tmp/ontrack.json &&
+              sed "s|\${BIND_DN}|$BIND_DN|g" /tmp/ontrack.json> /tmp/ontrack-dn.json &&
+              sed "s|\${BIND_CREDENTIAL}|$BIND_CREDENTIAL|g" /tmp/ontrack-dn.json > /output/ontrack.json &&
+              cat /output/ontrack.json
+          {{- else }}
           env:
-            # TODO Use secret
             - name: BIND_DN
               value: {{ .Values.auth.keycloak.ldap.bindDn | quote }}
             - name: BIND_CREDENTIAL
               value: {{ .Values.auth.keycloak.ldap.bindCredential | quote }}
           args:
             - >
-              cat /config/ontrack.json.tpl &&
               cp /config/ontrack.json.tpl /tmp/ontrack.json &&
               sed "s|\${BIND_DN}|$BIND_DN|g" /tmp/ontrack.json> /tmp/ontrack-dn.json &&
-              sed "s|\${BIND_CREDENTIAL}|$BIND_CREDENTIAL|g" /tmp/ontrack-dn.json > /output/ontrack.json &&
-              cat /output/ontrack.json
+              sed "s|\${BIND_CREDENTIAL}|$BIND_CREDENTIAL|g" /tmp/ontrack-dn.json > /output/ontrack.json
+          # args:
+          #   - >
+          #     cat /config/ontrack.json.tpl &&
+          #     cp /config/ontrack.json.tpl /tmp/ontrack.json &&
+          #     sed "s|\${BIND_DN}|$BIND_DN|g" /tmp/ontrack.json> /tmp/ontrack-dn.json &&
+          #     sed "s|\${BIND_CREDENTIAL}|$BIND_CREDENTIAL|g" /tmp/ontrack-dn.json > /output/ontrack.json &&
+          #     cat /output/ontrack.json
+          {{- end }}
           volumeMounts:
             - name: {{ include "ontrack.fullname" . }}-keycloak-ldap-template
               mountPath: /config
             - name: {{ include "ontrack.fullname" . }}-keycloak-ldap-json
               mountPath: /output
+            {{- if .Values.auth.keycloak.ldap.bindCredentialSecret.enabled }}
+            - name: {{ include "ontrack.fullname" . }}-keycloak-ldap-secret
+              mountPath: /secrets
+            {{- end }}
       {{- end }}
       containers:
       {{- if .Values.extraContainers }}
@@ -130,6 +150,13 @@ spec:
             optional: false
         - name: {{ include "ontrack.fullname" . }}-keycloak-ldap-json
           emptyDir: {}
+        {{- if .Values.auth.keycloak.ldap.bindCredentialSecret.enabled }}
+        - name: {{ include "ontrack.fullname" . }}-keycloak-ldap-secret
+          projected:
+            sources:
+              - secret:
+                  name: {{ .Values.auth.keycloak.ldap.bindCredentialSecret.secretName | quote }}
+        {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
