--- a/charts/ontrack/templates/ingress.yaml
+++ b/charts/ontrack/templates/ingress.yaml
@@ -26,7 +26,7 @@ spec:
       http:
         paths:
           # Keycloak
-          {{- if and .Values.auth.keycloak.enabled (not .Values.auth.keycloak.external.enabled) }}
+          {{- if and .Values.auth.keycloak.enabled .Values.auth.keycloak.service.ingressEnabled (not .Values.auth.keycloak.external.enabled) }}
           - path: "/{{ .Values.auth.keycloak.service.path }}"
             pathType: Prefix
             backend:
