--- a/charts/ontrack/values.yaml
+++ b/charts/ontrack/values.yaml
@@ -289,6 +289,8 @@ auth:
         enabled: false
         # Secret name
         secretName: ontrack-keycloak-bootstrap
+        # Generating the secret (the password only, keeping the username)
+        generate: true
         # Using an external secret
         externalSecret:
           # Creating the external secret definition
