chore(v5): exposing the Hook API

--- a/charts/ontrack/templates/ingress.yaml
+++ b/charts/ontrack/templates/ingress.yaml
@@ -43,6 +43,14 @@ spec:
                 name: {{ $fullName }}
                 port:
                   number: {{ .Values.service.port }}
+          # Hook API
+          - path: "/hook"
+            pathType: Prefix
+            backend:
+              service:
+                name: {{ $fullName }}
+                port:
+                  number: {{ .Values.service.port }}
           # Next UI
           - path: "/"
             pathType: Prefix
