--- a/charts/ontrack/templates/ui-deployment.yaml
+++ b/charts/ontrack/templates/ui-deployment.yaml
@@ -66,9 +66,9 @@ spec:
                   optional: false
               {{- else }}
             - name: NEXTAUTH_CLIENT_ID
-              value: {{ .Values.auth.oidc.credentials.clientId }}
+              value: {{ .Values.auth.oidc.credentials.client.clientId }}
             - name: NEXTAUTH_CLIENT_SECRET
-              value: {{ .Values.auth.oidc.credentials.clientSecret }}
+              value: {{ .Values.auth.oidc.credentials.client.clientSecret }}
               {{- end }}
             {{- end }}
             {{- if .Values.auth.keycloak.enabled }}
