--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,12 +35,10 @@ jobs:
 
       - name: Packaging
         run: |
-          helm package charts/ontrack --destination .cr-release-packages
+          helm package charts/ontrack
 
-      - name: Run chart-releaser
-        # needs fix for https://github.com/helm/chart-releaser-action/pull/202
-        uses: helm/chart-releaser-action@3e001cb8c68933439c7e721650f20a07a1a5c61e
-        with:
-          skip_packaging: "yes"
-        env:
-          CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Publishing
+        run: |
+          curl --data-binary "@ontrack-*.tgz" \
+            --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
+            https://chartmuseum.nemerosa.net/api/charts
