chore(v5): publishing in private repository - fixing the Curl command

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,6 +39,6 @@ jobs:
 
       - name: Publishing
         run: |
-          curl --data-binary "@ontrack-*.tgz" \
+          curl --data-binary "@(ls ontrack-*.tgz)" \
             --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
             https://chartmuseum.nemerosa.net/api/charts
