chore(v5): publishing in private repository - failures

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -40,5 +40,6 @@ jobs:
       - name: Publishing
         run: |
           curl --data-binary "@$(ls ontrack-*.tgz)" \
+            --fail \
             --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
             https://chartmuseum.nemerosa.net/api/charts
