chore(v5): Added support for configuring `ssoSessionIdleTimeout` and `accessTokenLifespan` in Keycloak settings to enhance session and token customization

--- a/charts/ontrack/templates/keycloak-settings.yaml
+++ b/charts/ontrack/templates/keycloak-settings.yaml
@@ -11,6 +11,8 @@ data:
       "enabled": true,
       "registrationAllowed": {{ .Values.auth.keycloak.settings.registrationAllowed }},
       "resetPasswordAllowed": {{ .Values.auth.keycloak.settings.resetPasswordAllowed }},
+      "ssoSessionIdleTimeout": {{ .Values.auth.keycloak.settings.ssoSessionIdleTimeout }},
+      "accessTokenLifespan": {{ .Values.auth.keycloak.settings.accessTokenLifespan }},
       "users": [
         {
           "username": "{{ .Values.auth.keycloak.settings.admin.username }}",
