--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Publishing in Docker Hub (OCI)
         run: |
           helm registry login registry-1.docker.io \
-            --username "${{ secrets.DOCKER_USER }}" \
-            --password "${{ secrets.DOCKER_TOKEN }}"
+            --username "${{ secrets.DOCKER_HUB_USERNAME }}" \
+            --password "${{ secrets.DOCKER_HUB_TOKEN }}"
           helm push "$(ls ontrack-*.tgz)" oci://registry-1.docker.io/nemerosa/ontrack-chart
