--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Publishing in Chart Museum
         run: |
-          curl --data-binary "@$(ls ontrack-*.tgz)" \
+          curl --data-binary "@$(ls yontrack-*.tgz)" \
             --fail \
             --user "${{ secrets.CHARTMUSEUM_USERNAME }}:${{ secrets.CHARTMUSEUM_PASSWORD }}"\
             https://chartmuseum.nemerosa.net/api/charts
@@ -54,4 +54,4 @@ jobs:
           helm registry login registry-1.docker.io \
             --username "${{ secrets.DOCKER_HUB_USERNAME }}" \
             --password "${{ secrets.DOCKER_HUB_TOKEN }}"
-          helm push "$(ls ontrack-*.tgz)" oci://registry-1.docker.io/nemerosa/ontrack-chart
+          helm push "$(ls yontrack-*.tgz)" oci://registry-1.docker.io/nemerosa
