--- a/charts/ontrack/templates/keycloak-client-secret.yaml
+++ b/charts/ontrack/templates/keycloak-client-secret.yaml
@@ -11,12 +11,12 @@ metadata:
 data:
   id: {{ include "ontrack.secretPassword" (dict
     "secretName" .Values.auth.keycloak.secret.name
-    "secretKey" "id"
+    "secretKey" "client-id"
     "context" .
     ) | b64enc | quote }}
   secret: {{ include "ontrack.secretPassword" (dict
     "secretName" .Values.auth.keycloak.secret.name
-    "secretKey" "secret"
+    "secretKey" "client-secret"
     "context" .
     ) | b64enc | quote }}
 {{- end }}
