chore(v5): fixing the key names in the generated secret for the client

--- a/charts/ontrack/templates/keycloak-client-secret.yaml
+++ b/charts/ontrack/templates/keycloak-client-secret.yaml
@@ -9,12 +9,12 @@ type: Opaque
 metadata:
   name: {{ .Values.auth.keycloak.secret.name | quote }}
 data:
-  id: {{ include "ontrack.secretPassword" (dict
+  client-id: {{ include "ontrack.secretPassword" (dict
     "secretName" .Values.auth.keycloak.secret.name
     "secretKey" "client-id"
     "context" .
     ) | b64enc | quote }}
-  secret: {{ include "ontrack.secretPassword" (dict
+  client-secret: {{ include "ontrack.secretPassword" (dict
     "secretName" .Values.auth.keycloak.secret.name
     "secretKey" "client-secret"
     "context" .
